Fixed horizontal scroll problem in chrome

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @media all {
 
     body, ul, h1, h2 {padding: 0; margin: 0;}
-    
+
 }
 
 @media screen {
@@ -14,7 +14,7 @@
 
     /* General */
     .container {width: 1020px; margin: 0 auto;}
-    body {color: var(--secondaryColor);}
+    body {color: var(--secondaryColor); overflow-x: hidden;}
     a {color: var(--primaryColor); text-decoration: none;}
     a:focus, .hamburgerMenu:focus {outline-offset: 4px; outline: 2px solid #000;}
     header a:focus, .hamburgerMenu:focus {outline: 2px solid var(--primaryColor);}
